--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link rel="manifest" href="https://progressier.app/eTDJlHN2M80YSYJU0rDT/progressier.json"/>
-    <script defer src="https://progressier.app/eTDJlHN2M80YSYJU0rDT/script.js"></script>
+<!--     <script defer src="https://progressier.app/eTDJlHN2M80YSYJU0rDT/script.js"></script> -->
   </head>
 
   <body>
